--- a/i18n/english.yml
+++ b/i18n/english.yml
@@ -548,6 +548,37 @@ components:
       high: High
       low: Low
       medium: Medium
+      title: Usage tier
+  PageNotFound:
+    homePage: home page
+    pageNotFound: Page Not Found.
+  PatternStopCard:
+    PatternStopContents:
+      defaultDwellTime: Default dwell time
+      defaultTravelTime: Default travel time
+      firstStopTravelTime: Travel time for first stop must be zero
+      stopHeadsignPlaceholder: Outbound
+      stopHeadsignText: Stop headsign
+      stopHeadsignTitle: Headsign that overrides trip headsign between stops.
+      timepoint: Timepoint?
+      travelTimeHelp: Define the default time it takes to travel to this stop from the previous stop.
+    PickupDropOffSelect:
+      available: Available (0)
+      continuousDropOffTitle: Indicates whether a rider can alight from the transit vehicle at any point along the vehicle's travel path.
+      continuousPickupTitle: Indicates whether a rider can board the transit vehicle anywhere along the vehicle's travel path.
+      continuousServiceDefault: (Inherit from route)
+      dropOffTitle: Define the dropff method/availability at this stop.
+      mustCoordinate: Must coordinate with driver to arrange (3)
+      mustPhoneAgency: Must phone agency to arrange (2)
+      notAvailable: Not available (1)
+      pickupDropOffDefault: (Default - Available)
+      pickupTitle: Define the pickup method/availability at this stop.
+  Permissions:
+    approve-alert: Approve GTFS-RT Alerts
+    approve-gtfs: Approve GTFS Feeds
+    edit-alert: Edit GTFS-RT Alerts
+    edit-gtfs: Edit GTFS Feeds
+    manage-feed: Manage Feed Configuration
   ProjectAccessSettings:
     admin: Admin
     cannotFetchFeeds: Cannot fetch feeds
