--- a/i18n/polish.yml
+++ b/i18n/polish.yml
@@ -771,7 +771,9 @@ components:
     priority: Priority
     problemType: Problem Type
   SelectFileModal:
+    cancel: Cancel
     mtcMergeWarning: Warning! Feeds merged outside of TDM are not recognized as a merged feed within TDM.
+    ok: OK
   ServerSettings:
     deployment:
       otpServers:
