feat: improve dateFormat

--- a/i18n/french.yml
+++ b/i18n/french.yml
@@ -366,7 +366,7 @@ components:
   FeedInfo:
     autoFetch: Récupération automatique
     autoPublish: Publication automatique
-    dateFormat: MMM D, YYYY 
+    dateFormat: DD.MM.YYYY
     deployable: Déployable
     edit: Editer
     lastUpdatedDate: Dernière mise à jour %date%
@@ -418,7 +418,7 @@ components:
     latestVersion: Dernière version
     status: Statut
   FeedSourceTableRow:
-    dateFormat: MMM D, YYYY 
+    dateFormat: DD.MM.YYYY
     expired: Expiré il y a %duration% 
     lastUpdated: Dernière mise à jour il y à %lastVersionUpdate% 
     none: Aucun
